--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=demo
+
+#spring.application.name=Assignment
+
+spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.gkto4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.database=Database1
+server.port=8080
